syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.produtos";

package com.example.produtos;

service ProductService {
  rpc Create (ProductServiceRequest) returns (ProductServiceResponse) {}
}

message ProductServiceRequest {
  string name = 1;
  double price = 2;
  int32 stock = 3;
}

message ProductServiceResponse {
  int64 id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}